--- a/app/design/frontend/default/rooja/layout/checkout.xml
+++ b/app/design/frontend/default/rooja/layout/checkout.xml
@@ -421,6 +421,16 @@ One page checkout order review block
         </reference>
         <reference name="content">
             <block type="checkout/onepage_success" name="checkout.success" template="checkout/success.phtml"/>
+	                <action method="addItemRender"><type>default</type><block>sales/order_item_renderer_default</block><template>sales/order/items/renderer/default.phtml</template></action>
+	                <action method="addItemRender"><type>grouped</type><block>sales/order_item_renderer_grouped</block><template>sales/order/items/renderer/default.phtml</template></action>
+	                <block type="sales/order_totals" name="order_totals" template="sales/order/totals.phtml">
+	                    <action method="setLabelProperties"><value>colspan="4" class="a-right"</value></action>
+	                    <action method="setValueProperties"><value>class="last a-right"</value></action>
+	                    <block type="tax/sales_order_tax" name="tax" template="tax/order/tax.phtml">
+	                        <action method="setIsPlaneMode"><value>1</value></action>
+	                    </block>
+	                </block>
+	            </block>
         </reference>
     </checkout_onepage_success>
     <checkout_onepage_failure translate="label">
