order confirmation page che changes

--- a/app/design/frontend/default/rooja/layout/checkout.xml
+++ b/app/design/frontend/default/rooja/layout/checkout.xml
@@ -420,7 +420,7 @@ One page checkout order review block
             <action method="setTemplate"><template>page/2columns-right-success.phtml</template></action>
         </reference>
         <reference name="content">
-            <block type="checkout/onepage_success" name="checkout.success" template="checkout/success.phtml"/>
+            <block type="checkout/onepage_success" name="checkout.success" template="checkout/success.phtml">
 	                <action method="addItemRender"><type>default</type><block>sales/order_item_renderer_default</block><template>sales/order/items/renderer/default.phtml</template></action>
 	                <action method="addItemRender"><type>grouped</type><block>sales/order_item_renderer_grouped</block><template>sales/order/items/renderer/default.phtml</template></action>
 	                <block type="sales/order_totals" name="order_totals" template="sales/order/totals.phtml">
