--- a/app/design/frontend/default/rooja/template/checkout/success.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/success.phtml
@@ -30,22 +30,22 @@
 <?php echo $this->getMessagesBlock()->getGroupedHtml() ?>
 
 <section id="thankYouMsg" class="fl col3 share-purchase">
+
 <?php if ($this->getOrderId()):?>
 <?php if ($this->getCanViewOrder()) :?>
-    <h4><?php echo $this->__('Your order # is: %s.', sprintf('<a href="%s">%s</a>', $this->escapeHtml($this->getViewOrderUrl()), $this->escapeHtml($this->getOrderId()))) ?></h4>
-<?php  else :?>
-    <p><?php echo $this->__('Your order # is: %s.', $this->escapeHtml($this->getOrderId())) ?></p>
+<p><?php echo $this->__('Your order # is: %s.', sprintf('<a href="%s">%s</a>', $this->escapeHtml($this->getViewOrderUrl()), $this->escapeHtml($this->getOrderId()))) ?></p>
+<?php else :?>
+<p><?php echo $this->__('Your order # is: %s.', $this->escapeHtml($this->getOrderId())) ?>.</p>
 <?php endif;?>
-	<p>Thanks for your purchase! We&#x27;ve received your order and will email you with a confirmation when it ships.</p>
+<p><?php echo $this->__('You will receive an order confirmation email with details of your order and a link to track its progress.') ?></p>
+<?php if ($this->getCanPrintOrder()) :?>
+<p>
+<?php echo $this->__('Click <a href="%s" onclick="this.target='_blank'">here to print</a> a copy of your order confirmation.', $this->getPrintUrl()) ?> 
+</p>
+<?php endif;?>
+<?php echo $this->getChildHtml() ?>
+<?php endif;?>
 
-	<p>If you have any questions or there is an error in your order, please <a href="/contacts">Contact Us</a></p>
-<?php if ($this->getCanViewOrder() && $this->getCanPrintOrder()) :?>
-    <p>
-        <?php echo $this->__('Click <a href="%s" onclick="this.target=\'_blank\'">here to print</a> a copy of your order confirmation.', $this->getPrintUrl()) ?>
-        <?php echo $this->getChildHtml() ?>
-    </p>
-<?php endif;?>
-<?php endif;?>
 <button type="button" class="button" id="continueShoppingBtn" title="Return Home" onclick="window.location='/'">Return Home</button>
 </section>
 
@@ -64,11 +64,6 @@
 	<script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js#pubid=philosophie"></script>
 	<!-- AddThis Button END -->
 </section>
-
-
-<?php $order = Mage::getModel('sales/order')->load($this->getOrderId());
-echo $order->getPayment()->getMethod(); ?>
-
 
 
 <?php $_order = $this->getOrder() ?>
