--- a/app/design/frontend/default/rooja/template/checkout/success.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/success.phtml
@@ -29,7 +29,7 @@
 
 <?php echo $this->getMessagesBlock()->getGroupedHtml() ?>
 
-<section id="thankYouMsg" class="fl col3 share-purchase">
+<section id="thankYouMsg" class="fl col3">
 <?php if ($this->getOrderId()):?>
 <?php if ($this->getCanViewOrder()) :?>
     <h4><?php echo $this->__('Your order # is: %s.', sprintf('<a href="%s">%s</a>', $this->escapeHtml($this->getViewOrderUrl()), $this->escapeHtml($this->getOrderId()))) ?></h4>
@@ -49,7 +49,7 @@
 <button type="button" class="button" id="continueShoppingBtn" title="Return Home" onclick="window.location='/'">Return Home</button>
 </section>
 
-<section id="sharePurchase" class="fr col1">
+<section id="sharePurchase" class="fr col1 share-purchase">
 	<h3>Share Your Purchase!</h3>
 	<p>Let your friends know you scored some sweet loot on Rooja!  Encourage them to sign up and earn a $10 credit with every friend.</p>
 	<!-- AddThis Button BEGIN -->
