--- a/app/design/frontend/default/rooja/template/checkout/cart.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/cart.phtml
@@ -140,7 +140,7 @@
 
 <section id="commentsRelated">
 	<section id="related" class="container">
-	<h2>You may also like</h2>
+	<h2>Wear it with</h2>
                 <?php echo $this->getChildHtml('crosssell') ?>
 	</section>
 </section>
