--- a/app/design/frontend/default/rooja/template/aw_rma/customer/new.phtml
+++ b/app/design/frontend/default/rooja/template/aw_rma/customer/new.phtml
@@ -19,7 +19,7 @@
 <?php $_formData = $this->getFormData() ?>
 <div class="awrma-account">
     <div class="page-title title-buttons">
-        <h1><?php echo $this->__('Request RMA') ?></h1>
+        <h1><?php echo $this->__('Request Return') ?></h1>
     </div>
     <div id="messages">
         <?php echo $this->getMessagesBlock()->getGroupedHtml() ?>
