--- a/app/design/frontend/base/default/template/rewardsref/customer/referral/affiliate.phtml
+++ b/app/design/frontend/base/default/template/rewardsref/customer/referral/affiliate.phtml
@@ -14,7 +14,7 @@
 			<script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js#pubid=philosophie"></script>
 	</fieldset>
 </div>
-<script type="text/transform">
+<script type="text/javascript">
 $(document).ready(function(){
     $('#copyBtn').zclip({
         path:'/js/ZeroClipboard.swf',
