--- a/app/design/frontend/base/default/template/rewardsref/customer/referral/affiliate.phtml
+++ b/app/design/frontend/base/default/template/rewardsref/customer/referral/affiliate.phtml
@@ -15,8 +15,8 @@
 	</fieldset>
 </div>
 <script type="text/javascript">
-$(document).ready(function(){
-    $('#copyBtn').zclip({
+jQuery(document).ready(function(){
+    jQuery('#copyBtn').zclip({
         path:'/js/ZeroClipboard.swf',
         copy:function(){return $('input#referralLink').val();}
     });
