--- a/app/design/frontend/default/rooja/template/catalog/product/view.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/view.phtml
@@ -61,7 +61,7 @@ if (!$categoryIds == null){
 
 <section id="saleDetails">
 	<div class="container">
-		<a href="#" class="needAssistance fr" title="Need Assitance? Talk to a live rep"><img src="<?php echo $this->getSkinUrl('images/icons/question-mark.png'); ?>" alt="Question mark icon"> Need Assistance</a>
+		<a href="#" class="needAssistance fr noMargin" title="Need Assitance? Talk to a live rep"><img src="<?php echo $this->getSkinUrl('images/icons/question-mark.png'); ?>" alt="Question mark icon"> Need Assistance</a>
 <div id="messages_product_view"><?php echo $this->getMessagesBlock()->getGroupedHtml() ?></div>
 		<?php if (!$categoryIds == null){ ?>
 			<?php if ($expired == 1) { ?>
