--- a/app/design/frontend/base/default/template/rewardsref/customer/referral/affiliate.phtml
+++ b/app/design/frontend/base/default/template/rewardsref/customer/referral/affiliate.phtml
@@ -17,7 +17,7 @@
 <script type="text/javascript">
 jQuery(document).ready(function(){
     jQuery('#copyBtn').zclip({
-        path:'/js/ZeroClipboard.swf',
+        path:'/js/jquery/ZeroClipboard.swf',
         copy:function(){return $('input#referralLink').val();}
     });
 
