--- a/app/design/frontend/base/default/template/rewardsref/customer/referral/affiliate.phtml
+++ b/app/design/frontend/base/default/template/rewardsref/customer/referral/affiliate.phtml
@@ -18,7 +18,7 @@
 jQuery(document).ready(function(){
     jQuery('#copyBtn').zclip({
         path:'/js/jquery/ZeroClipboard.swf',
-        copy:function(){return $('input#referralLink').val();}
+        copy:function(){return jQuery('input#referralLink').val();}
     });
 
 
