--- a/app/design/frontend/base/default/template/rewardsref/customer/referral/invite/plaxo/referral_form.phtml
+++ b/app/design/frontend/base/default/template/rewardsref/customer/referral/invite/plaxo/referral_form.phtml
@@ -27,7 +27,7 @@
 
             <div class="input-box" style="display:none;" >
                 <label for="subject"><?php echo $this->__('Subject (Optional)') ?></label>
-                <textarea name="subject" id="subject" class="required-entry textarea" style="width:100%;" rows="1" cols="80" title="<?php echo $this->__('Subject') ?>"  ></textarea>
+                <textarea name="subject" id="subject" class="required-entry textarea" style="width:100%;" rows="1" cols="80" title="<?php echo $this->__('Subject') ?>"  >Enter email addresses separated by commas</textarea>
             </div>
 
             <div class="input-box">
