--- a/app/design/frontend/base/default/template/rewardsref/customer/referral/affiliate.phtml
+++ b/app/design/frontend/base/default/template/rewardsref/customer/referral/affiliate.phtml
@@ -10,7 +10,14 @@
 						<a class="addthis_button_facebook"><img src="<?php echo $this->getSkinUrl('images/icons/facebook-blue-24.png'); ?>" alt="facebook icon"></a>
 						<a class="addthis_button_twitter"><img src="<?php echo $this->getSkinUrl('images/icons/twitter-teal-24.png'); ?>" alt="twitter icon"></a>
 						</div>
-						<script type="text/javascript">var addthis_config = {"data_track_clickback":true};</script>			
+						<script type="text/javascript">
+							var addthis_config = {"data_track_clickback":true};
+							var addthis_share = { 
+							    templates: {
+							                   twitter: 'Join me at Rooja! Rooja brings you carefully selected fashion products from internationally renowned designers and brands at discounts upto 60%. {{url}} via @RoojaFashion'
+							               }
+							}
+						</script>			
 			<script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js#pubid=philosophie"></script>
 	</fieldset>
 </div>
