--- a/app/design/frontend/base/default/template/rewardsref/customer/referral/affiliate.phtml
+++ b/app/design/frontend/base/default/template/rewardsref/customer/referral/affiliate.phtml
@@ -14,7 +14,7 @@
 							var addthis_config = {"data_track_clickback":true};
 							var addthis_share = { 
 							    templates: {
-							                   twitter: 'Join me at Rooja! Rooja brings you carefully selected fashion products from internationally renowned designers and brands at discounts upto 60%. {{url}} via @RoojaFashion'
+							                   twitter: 'Join me at Rooja! Apparel from leading International designers at prices you can&rsquo;t beat. {{url}} via @RoojaFashion'
 							               }
 							}
 						</script>			
