--- a/app/design/frontend/default/rooja/template/catalog/product/view.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/view.phtml
@@ -96,7 +96,7 @@ if (!$categoryIds == null){
 
 				
 				<div class="shareThis">
-					<p>Share this sale with your friends</p>
+					<h4>Share this sale with your friends</h4>
 					
 					<!-- AddThis Button BEGIN -->
 					<div class="addthis_toolbox addthis_default_style" addthis:title="<?php echo $_helper->productAttribute($_product, $_product->getName(), 'name') ?>" addthis:description="Like my pick? Visit Rooja.com now and get access to top designer brands at upto 60% off retail. The website requires membership. Good news: membership is free. :)">
